--- a/BasicApp1/Views/Shared/_Layout.cshtml
+++ b/BasicApp1/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
                     <li><a asp-area="" asp-controller="HelloWorld" asp-action="Index">Index</a></li>
-                    <li><a asp-area="" asp-controller="Pass" asp-action="Create">Register</a></li>
+                    <!--<li><a asp-area="" asp-controller="Pass" asp-action="Create">Register</a></li>-->
                 </ul>
             </div>
         </div>
